# QCDutils

./: .gitignore  Makefile.am  acinclude.m4  alpha_s.c  alpha_s.h  build.sh  configure.ac  convert.c  data_loader.c  data_loader.h  effmass.c  error.c  mass.c  models.c  models.h  output.c  output.h  parameters.c  parameters.h  parsers.c  parsers.h  pcac.c  phyfit.c  prop.c  pseudosc.c  qcd_arg_parse.c  qcd_arg_parse.h  qcd_phyfit  qed_fvol_tabfunc.c  qed_fvol_tabfunc.h  qed_fvol_tabfunc.nb  splitsum.c
